--- a/src/app/core/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/core/components/modal-dialog/modal-dialog.component.html
@@ -1,11 +1,18 @@
 <div class="modal-content">
     <div class="modal-header">
-        <h5 class="modal-title"><ng-container *ngTemplateOutlet="(titleTemplateRef$ | async)"></ng-container></h5>
-        <button *ngIf="options?.closable" type="button"
-                (click)="closeModal()"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close">
+        <h5 class="modal-title">
+            <ng-container
+                *ngTemplateOutlet="titleTemplateRef$ | async"
+            ></ng-container>
+        </h5>
+        <button
+            *ngIf="options?.closable"
+            type="button"
+            (click)="closeModal()"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+        >
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
@@ -16,6 +23,8 @@
         ></vsf-dialog-component-outlet>
     </div>
     <div class="modal-footer">
-        <ng-container *ngTemplateOutlet="(buttonsTemplateRef$ | async)"></ng-container>
+        <ng-container
+            *ngTemplateOutlet="buttonsTemplateRef$ | async"
+        ></ng-container>
     </div>
 </div>
