--- a/src/app/core/components/product-search-bar/product-search-bar.component.html
+++ b/src/app/core/components/product-search-bar/product-search-bar.component.html
@@ -1,8 +1,10 @@
 <div class="input-group">
-    <input type="text"
-           [formControl]="searchTerm"
-           (keydown.enter)="doSearch(searchTerm.value)"
-           class="form-control"
-           placeholder="Search..."
-           aria-label="Search input">
+    <input
+        type="text"
+        [formControl]="searchTerm"
+        (keydown.enter)="doSearch(searchTerm.value)"
+        class="form-control"
+        placeholder="{{ 'global.search' | translate }}"
+        aria-label="Search input"
+    />
 </div>
