--- a/src/app/core/components/cart-drawer/cart-drawer.component.html
+++ b/src/app/core/components/cart-drawer/cart-drawer.component.html
@@ -2,21 +2,24 @@
     <button class="btn" (click)="close.emit()">
         <fa-icon icon="times"></fa-icon>
     </button>
-    <h3 class="cart-title">Cart</h3>
+    <h3 class="cart-title">{{ "global.card" | translate }}</h3>
 </div>
 <div *ngIf="!(isEmpty$ | async); else empty" class="cart-drawer-contents">
-    <vsf-cart-contents [cart]="cart$ | async"
-                       [canAdjustQuantities]="true"
-                       (setQuantity)="setQuantity($event)"></vsf-cart-contents>
+    <vsf-cart-contents
+        [cart]="cart$ | async"
+        [canAdjustQuantities]="true"
+        (setQuantity)="setQuantity($event)"
+    ></vsf-cart-contents>
     <div class="checkout-button">
-        <a class="btn btn-block btn-primary"
-           color="primary"
-           (click)="close.emit()"
-           [routerLink]="['/checkout']">Check Out</a>
+        <a
+            class="btn btn-block btn-primary"
+            color="primary"
+            (click)="close.emit()"
+            [routerLink]="['/checkout']"
+            >{{ "global.checkout" | translate }}</a
+        >
     </div>
 </div>
 <ng-template #empty>
-    <div class="empty">
-        Cart is empty
-    </div>
+    <div class="empty">{{ "global.card-empty" | translate }}</div>
 </ng-template>
