--- a/src/app/core/components/product-card/product-card.component.html
+++ b/src/app/core/components/product-card/product-card.component.html
@@ -1,18 +1,27 @@
 <div class="product-card">
     <ng-template [ngIf]="product" [ngIfElse]="placeholder">
         <a [routerLink]="['/product', product.slug]" class="image-wrapper">
-            <img class="product-image" [src]="product.productAsset | assetPreview:200:200">
+            <img
+                class="product-image"
+                [src]="product.productAsset | assetPreview: 200:200"
+            />
         </a>
         <div class="">
             <a [routerLink]="['/product', product.slug]" class="product-name">
                 {{ product.productName }}
             </a>
             <div class="price">
-                <ng-template [ngIf]="product.priceWithTax.min === product.priceWithTax.max" [ngIfElse]="range">
+                <ng-template
+                    [ngIf]="
+                        product.priceWithTax.min === product.priceWithTax.max
+                    "
+                    [ngIfElse]="range"
+                >
                     {{ product.priceWithTax.min | formatPrice }}
                 </ng-template>
                 <ng-template #range>
-                    From {{ product.priceWithTax.min | formatPrice }}
+                    {{ "global.from" | translate }}
+                    {{ product.priceWithTax.min | formatPrice }}
                 </ng-template>
             </div>
         </div>
