fix: checkout stage indicator

--- a/src/app/checkout/components/checkout-stage-indicator/checkout-stage-indicator.component.html
+++ b/src/app/checkout/components/checkout-stage-indicator/checkout-stage-indicator.component.html
@@ -10,10 +10,10 @@
 <div class="line"></div>
 <div class="stage" [class.active]="activeStage === 3">
     <div class="number">{{ signedIn ? 2 : 3 }}</div>
-    <div class="label">{{ "checkout.payment" | translate }}</div>
+    <div class="label">{{ "global.payment" | translate }}</div>
 </div>
 <div class="line"></div>
 <div class="stage" [class.active]="activeStage === 4">
     <div class="number">{{ signedIn ? 3 : 4 }}</div>
-    <div class="label">{{ "checkout.complete" | translate }}</div>
+    <div class="label">{{ "global.complete" | translate }}</div>
 </div>
