chore: font changed

--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -14,7 +14,7 @@ $breadcrumb-bg: transparent;
 $breadcrumb-padding-x: 0;
 
 // $font-family-base: 'Montserrat', sans-serif;
-$headings-font-family: 'Didact Gothic', serif;
+$headings-font-family: 'Roboto', serif;
 
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
