feat: app component headre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
                     <img
                         src="assets/cube-logo-line-icon-nostroke.png"
                         class="logo"
-                        alt="Vendure Storefront"
+                        alt="Intelligo E-Commerce"
                     />
                 </a>
                 <div class="flex-grow-1 d-none d-sm-block"></div>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="text-center text-secondary">
-            This is a demo storefront for platform.sale<a
+            This is a demo storefront for <a
                 href="https://www.platform.sale/"
                 >platform.sale</a
             ><br />
