--- a/src/app/account/components/register/register.component.html
+++ b/src/app/account/components/register/register.component.html
@@ -35,8 +35,7 @@
             {{ "account.register" | translate }}
         </button>
         <div *ngIf="registrationSent" class="registration-sent">
-            Great! Now check your email ({{ emailAddress }}) to complete
-            registration.
+            Мэйл хаягаа шалгана уу. Таны ({{ emailAddress }}) мэйлрүү баталгаажуулах холбоос илгээсэн.
         </div>
     </vsf-centered-card>
 </form>
