feat: fixed auth components

--- a/src/app/account/components/forgotten-password/forgotten-password.component.html
+++ b/src/app/account/components/forgotten-password/forgotten-password.component.html
@@ -3,7 +3,7 @@
         <ng-container *ngIf="!submitted">
             <input
                 class="form-control"
-                placeholder="Email address"
+                placeholder="{{'global.email' | translate}}"
                 name="emailAddress"
                 type="email"
                 email
