--- a/src/app/account/components/reset-password/reset-password.component.html
+++ b/src/app/account/components/reset-password/reset-password.component.html
@@ -3,7 +3,7 @@
         <div class="input-group mb-3" *ngIf="!error">
             <input
                 class="form-control"
-                placeholder="Password"
+                placeholder="{{'global.password' | translate}}"
                 type="password"
                 name="password"
                 aria-describedby="button-verify"
