chore: Webhook plugin

--- a/packages/webhook-plugin/src/ui/webhook.component.html
+++ b/packages/webhook-plugin/src/ui/webhook.component.html
@@ -2,7 +2,7 @@
   <div class="clr-col">
     <form class="form" [formGroup]="webhookForm">
       <section class="form-block">
-        <vdr-form-field label="Webhook url" for="url">
+        <vdr-form-field label="Webhook холбоос" for="url">
           <input id="url" type="text" formControlName="url" />
         </vdr-form-field>
         <button
@@ -10,7 +10,7 @@
           (click)="save()"
           [disabled]="webhookForm.invalid || webhookForm.pristine"
         >
-          Save
+          Хадгалах
         </button>
       </section>
     </form>
