feat(core): Added localization with params account and checkout (#234)

--- a/apps/storefront/src/app/account/components/forgotten-password/forgotten-password.component.html
+++ b/apps/storefront/src/app/account/components/forgotten-password/forgotten-password.component.html
@@ -3,7 +3,7 @@
         <ng-container *ngIf="!submitted">
             <input
                 class="form-control"
-                placeholder="{{'global.email' | translate}}"
+                placeholder="{{ 'global.email' | translate }}"
                 name="emailAddress"
                 type="email"
                 email
@@ -16,12 +16,11 @@
                 [disabled]="resetForm.invalid || submitted"
                 type="submit"
             >
-                {{ "account.reset-password" | translate }}
+                {{ 'account.reset-password' | translate }}
             </button>
         </ng-container>
         <div class="alert alert-success" role="alert" *ngIf="submitted">
-            An email has been sent to <strong>{{ emailAddress }}</strong
-            >. Please check and follow the included instructions.
+            {{ 'account.forgot-password-alert' | translate: { param: emailAddress } }}
         </div>
     </vsf-centered-card>
 </form>
