--- a/apps/storefront/src/app/checkout/components/checkout-confirmation/checkout-confirmation.component.html
+++ b/apps/storefront/src/app/checkout/components/checkout-confirmation/checkout-confirmation.component.html
@@ -1,53 +1,40 @@
 <div *ngIf="order$ | async as order">
     <div class="text-center mb-4">
-        <h2 class="display-4">{{ "checkout.thanks-order" | translate }}</h2>
+        <h2 class="display-4">{{ 'checkout.thanks-order' | translate }}</h2>
         <ul class="order-details list-unstyled">
             <li class="lead">
-                <span class="text-muted"
-                    >{{ "account.order-code" | translate }}:</span
-                >
+                <span class="text-muted">{{ 'account.order-code' | translate }}:</span>
                 {{ order.code }}
             </li>
             <li class="lead">
-                <span class="text-muted"
-                    >{{ "checkout.placed" | translate }}:</span
-                >
-                {{ order.updatedAt | date: "medium" }}
+                <span class="text-muted">{{ 'checkout.placed' | translate }}:</span>
+                {{ order.updatedAt | date: 'medium' }}
             </li>
         </ul>
     </div>
 
     <div *ngIf="!order.customer.user" class="account-signup card">
         <div class="card-header">
-            <h3>{{ "account.create-account" | translate }}</h3>
+            <h3>{{ 'account.create-account' | translate }}</h3>
         </div>
         <div class="card-body">
             <p class="lead">
-                Create an account to enjoy faster checkouts, order tracking,
-                order history and more!
+                {{ 'checkout.confirmation-lead' | translate }}
             </p>
-            <button
-                class="btn btn-primary btn-block"
-                (click)="register()"
-                [disabled]="registrationSent"
-            >
-                {{ "account.create-account" | translate }}
+            <button class="btn btn-primary btn-block" (click)="register()" [disabled]="registrationSent">
+                {{ 'account.create-account' | translate }}
             </button>
             <div *ngIf="registrationSent" class="registration-sent">
-                Great! Now check your email ({{ order.customer.emailAddress }})
-                to complete registration.
+                {{ 'checkout.confirmation-send' | translate: { param: order.customer.emailAddress } }}
             </div>
         </div>
     </div>
     <div class="row justify-content-center">
         <div class="col-lg-8">
-            <vsf-cart-contents
-                [cart]="order"
-                [canAdjustQuantities]="false"
-            ></vsf-cart-contents>
+            <vsf-cart-contents [cart]="order" [canAdjustQuantities]="false"></vsf-cart-contents>
         </div>
     </div>
 </div>
 <ng-container *ngIf="notFound$ | async">
-    <h2 class="display-4">{{ "global.page-not-found" | translate }}</h2>
+    <h2 class="display-4">{{ 'global.page-not-found' | translate }}</h2>
 </ng-container>
