--- a/apps/storefront/src/app/checkout/components/checkout-sign-in/checkout-sign-in.component.html
+++ b/apps/storefront/src/app/checkout/components/checkout-sign-in/checkout-sign-in.component.html
@@ -1,4 +1,4 @@
-<h2>{{ "account.already-have-account" | translate }}</h2>
+<h2>{{ 'account.already-have-account' | translate }}</h2>
 
 <div class="sign-in-row">
     <vsf-sign-in
@@ -6,14 +6,14 @@
         [displayRegisterLink]="false"
     ></vsf-sign-in>
     <div class="or">
-        <div>{{ "global.or" | translate }}</div>
+        <div>{{ 'global.or' | translate }}</div>
     </div>
     <div class="card guest">
         <div class="card-body d-flex align-items-center">
             <div>
-                <a class="btn btn-primary" [routerLink]="['./shipping']"
-                    >Continue as guest</a
-                >
+                <a class="btn btn-primary" [routerLink]="['./shipping']">{{
+                    'checkout.continue-guest' | translate
+                }}</a>
             </div>
         </div>
     </div>
