chore: Fixed sigin some keys (#236)

--- a/apps/storefront/src/app/shared/components/sign-in/sign-in.component.html
+++ b/apps/storefront/src/app/shared/components/sign-in/sign-in.component.html
@@ -2,7 +2,7 @@
     <vsf-centered-card>
         <input
             class="form-control"
-            placeholder="{{ 'global.email' | translate }}"
+            placeholder="{{ 'account.email' | translate }}"
             name="emailAddress"
             type="email"
             email
@@ -11,7 +11,7 @@
         />
         <input
             class="form-control mt-1"
-            placeholder="{{ 'global.password' | translate }}"
+            placeholder="{{ 'account.password' | translate }}"
             type="password"
             name="password"
             required
