chore: Fixed register text lang keys (#237)

--- a/apps/storefront/src/app/account/components/register/register.component.html
+++ b/apps/storefront/src/app/account/components/register/register.component.html
@@ -2,7 +2,7 @@
     <vsf-centered-card>
         <input
             class="form-control"
-            placeholder="{{ 'global.firstname' | translate }}"
+            placeholder="{{ 'account.firstname' | translate }}"
             name="firstName"
             required
             [disabled]="registrationSent"
@@ -10,7 +10,7 @@
         />
         <input
             class="form-control mt-1"
-            placeholder="{{ 'global.lastname' | translate }}"
+            placeholder="{{ 'account.lastname' | translate }}"
             name="lastName"
             required
             [disabled]="registrationSent"
@@ -18,7 +18,7 @@
         />
         <input
             class="form-control mt-1"
-            placeholder="{{ 'global.email' | translate }}"
+            placeholder="{{ 'account.email' | translate }}"
             name="emailAddress"
             required
             type="email"
