--- a/apps/storefront/src/app/account/components/verify/verify.component.html
+++ b/apps/storefront/src/app/account/components/verify/verify.component.html
@@ -6,7 +6,7 @@
         <div class="input-group mb-3">
             <input
                 class="form-control"
-                placeholder="{{'global.password' | translate}}"
+                placeholder="{{'account.password' | translate}}"
                 type="password"
                 name="password"
                 aria-describedby="button-verify"
