fix(admin-ui): Allow CustomerGroup to be created
Fixes #1300

--- a/packages/admin-ui/src/lib/customer/src/components/customer-group-detail-dialog/customer-group-detail-dialog.component.html
+++ b/packages/admin-ui/src/lib/customer/src/components/customer-group-detail-dialog/customer-group-detail-dialog.component.html
@@ -22,7 +22,7 @@
 </form>
 <ng-template vdrDialogButtons>
     <button type="button" class="btn" (click)="cancel()">{{ 'common.cancel' | translate }}</button>
-    <button type="submit" (click)="save()" [disabled]="!group.name" class="btn btn-primary">
+    <button type="submit" (click)="save()" [disabled]="!form.valid" class="btn btn-primary">
         <span *ngIf="group.id">{{ 'customer.update-customer-group' | translate }}</span>
         <span *ngIf="!group.id">{{ 'customer.create-customer-group' | translate }}</span>
     </button>
