--- a/packages/admin-ui/src/lib/dashboard/src/widgets/welcome-widget/welcome-widget.component.html
+++ b/packages/admin-ui/src/lib/dashboard/src/widgets/welcome-widget/welcome-widget.component.html
@@ -5,7 +5,7 @@
     </h4>
 
     <p class="p5" *ngIf="!hideVendureBranding || !hideVersion">
-        {{ hideVendureBranding ? '' : 'Vendure' }} {{ hideVersion ? '' : ('Admin UI v' + version) }}
+        {{ hideVendureBranding ? '' : 'platform.sale' }} {{ hideVersion ? '' : ('Admin UI v' + version) }}
     </p>
 </div>
 <div class="placeholder">
