fix(storefront): Added param to notification next subject

--- a/apps/storefront/src/app/core/components/notification/notification.component.html
+++ b/apps/storefront/src/app/core/components/notification/notification.component.html
@@ -6,7 +6,7 @@
             class="ml-2 mb-1 close"
             data-dismiss="toast"
             aria-label="Close"
-            (click)="close.next()"
+            (click)="close.next(1)"
         >
             <span aria-hidden="true">&times;</span>
         </button>
