fix(core): Dropped the jumbotron component as it can be replicated with utilities

--- a/apps/storefront/src/app/core/components/collections-menu/collections-menu.component.scss
+++ b/apps/storefront/src/app/core/components/collections-menu/collections-menu.component.scss
@@ -13,7 +13,7 @@
     @include media-breakpoint-up(sm) {
         display: block;
         .nav-wrapper {
-            @include make-container-max-widths();
+            @include container-max-widths();
             width: 100%;
             margin: auto;
         }
