fix: Added calc() on outside to / division

--- a/apps/storefront/src/app/checkout/components/checkout-stage-indicator/checkout-stage-indicator.component.scss
+++ b/apps/storefront/src/app/checkout/components/checkout-stage-indicator/checkout-stage-indicator.component.scss
@@ -35,7 +35,7 @@
     }
 
     .label {
-        margin-left: $spacer / 2;
+        margin-left: calc($spacer / 2);
         color: $gray-600;
     }
 }
@@ -44,5 +44,5 @@
     flex: 1;
     height: 0;
     border-bottom: 1px solid $gray-300;
-    margin: 0 $spacer / 2;
+    margin: 0 calc($spacer / 2);
 }
