--- a/apps/storefront/src/app/shared/components/collection-card/collection-card.component.scss
+++ b/apps/storefront/src/app/shared/components/collection-card/collection-card.component.scss
@@ -3,7 +3,7 @@
 :host {
     display: block;
     position: relative;
-    padding: $spacer / 2 $spacer;
+    padding: calc($spacer / 2) $spacer;
     overflow: hidden;
     margin: $spacer;
 }
