--- a/apps/storefront/src/app/core/components/collections-menu/collections-menu.component.scss
+++ b/apps/storefront/src/app/core/components/collections-menu/collections-menu.component.scss
@@ -12,11 +12,11 @@
 
     @include media-breakpoint-up(sm) {
         display: block;
-        // .nav-wrapper {
-        //     @include container-max-widths();
-        //     width: 100%;
-        //     margin: auto;
-        // }
+        .nav-wrapper {
+            @include make-container-max-widths();
+            width: 100%;
+            margin: auto;
+        }
     }
 }
 
