--- a/packages/email-plugin/templates/order-confirmation/body.hbs
+++ b/packages/email-plugin/templates/order-confirmation/body.hbs
@@ -97,7 +97,7 @@
                     <td>
                         <img alt="{{ productVariant.name }}"
                              style="width: 50px; height: 50px;"
-                             src="{{ featuredAsset.preview }}?w=50&h=50" />
+                             src="assets/{{ featuredAsset.preview }}?w=50&h=50" />
                     </td>
                     <td>{{ quantity }} x {{ productVariant.name }}</td>
                     <td>{{ productVariant.quantity }}</td>
@@ -116,9 +116,9 @@
                 <td colspan="3">Sub-total:</td>
                 <td>${{ formatMoney order.subTotalWithTax }}</td>
             </tr>
-            {{#each shippingMethods }}
+            {{#each shippingLines }}
             <tr class="order-row">
-                <td colspan="3">Shipping ({{ name }}):</td>
+                <td colspan="3">Shipping ({{ shippingMethod.name }}):</td>
                 <td>${{ formatMoney priceWithTax }}</td>
             </tr>
             {{/each}}
