--- a/apps/template/src/app/core/components/account-payments/account-payments.component.html
+++ b/apps/template/src/app/core/components/account-payments/account-payments.component.html
@@ -1,13 +1,13 @@
 <!-- Hero Start -->
-<section class="bg-profile d-table w-100 bg-primary" id="home"
-  style="background: url('assets/images/account/bg.png') center center;">
+<section class="bg-profile d-table w-100 bg-primary"
+  style="background: url('assets/images/account/bg.png') center center;" id="home">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="card public-profile border-0 rounded shadow" style="z-index: 1;">
           <div class="card-body">
             <div class="row align-items-center">
-              <div class="col-lg-2 col-md-3 text-md-left text-center">
+              <div class="col-lg-2 col-md-3 text-md-start text-center">
                 <img src="assets/images/client/05.jpg" class="avatar avatar-large rounded-circle shadow d-block mx-auto"
                   alt="">
               </div>
@@ -15,40 +15,34 @@
 
               <div class="col-lg-10 col-md-9">
                 <div class="row align-items-end">
-                  <div class="col-md-7 text-md-left text-center mt-4 mt-sm-0">
+                  <div class="col-md-7 text-md-start text-center mt-4 mt-sm-0">
                     <h3 class="title mb-0">Krista Joseph</h3>
-                    <small class="text-muted h6 mr-2">Web Developer</small>
+                    <small class="text-muted h6 me-2">Web Developer</small>
                     <ul class="list-inline mb-0 mt-3">
-                      <li class="list-inline-item mr-2"><a href="javascript:void(0)" class="text-muted"
+                      <li class="list-inline-item me-2"><a href="javascript:void(0)" class="text-muted"
                           title="Instagram">
-                          <i-feather name="instagram" class="fea icon-sm mr-2"></i-feather>
-                          krista_joseph
+                          <i-feather name="instagram" class="fea icon-sm me-2"></i-feather>krista_joseph
                         </a></li>
                       <li class="list-inline-item"><a href="javascript:void(0)" class="text-muted" title="Linkedin">
-                          <i-feather name="linkedin" class="fea icon-sm mr-2"></i-feather>
-                          Krista Joseph
+                          <i-feather name="linkedin" class="fea icon-sm me-2"></i-feather>Krista Joseph
                         </a></li>
                     </ul>
                   </div>
                   <!--end col-->
-                  <div class="col-md-5 text-md-right text-center">
+                  <div class="col-md-5 text-md-end text-center">
                     <ul class="list-unstyled social-icon social mb-0 mt-4">
-                      <li class="list-inline-item"><a href="javascript:void(0)" class="rounded" placement="bottom"
-                          ngbTooltip="Add Friend">
-                          <i-feather name="user-plus" class="fea icon-sm fea-social"></i-feather>
-                        </a></li>
-                      <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded" placement="bottom"
-                          ngbTooltip="Messages">
-                          <i-feather name="message-circle" class="fea icon-sm fea-social"></i-feather>
-                        </a></li>
-                      <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded" placement="bottom"
-                          ngbTooltip="Notifications">
-                          <i-feather name="bell" class="fea icon-sm fea-social"></i-feather>
-                        </a></li>
-                      <li class="list-inline-item ml-1"><a routerLink="/account-setting" class="rounded" placement="bottom"
-                          ngbTooltip="Settings">
-                          <i-feather name="tool" class="fea icon-sm fea-social"></i-feather>
-                        </a></li>
+                      <li class="list-inline-item"><a href="javascript:void(0)" class="rounded" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Add Friend"><i
+                            class="uil uil-user-plus align-middle"></i></a></li>
+                      <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded"
+                          data-bs-toggle="tooltip" data-bs-placement="bottom" title="Messages"><i
+                            class="uil uil-comment align-middle"></i></a></li>
+                      <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded"
+                          data-bs-toggle="tooltip" data-bs-placement="bottom" title="Notifications"><i
+                            class="uil uil-bell align-middle"></i></a></li>
+                      <li class="list-inline-item ms-1"><a routerLink="/account-setting" class="rounded"
+                          data-bs-toggle="tooltip" data-bs-placement="bottom" title="Settings"><i
+                            class="uil uil-cog align-middle"></i></a></li>
                     </ul>
                     <!--end icon-->
                   </div>
@@ -111,77 +105,59 @@
           </div>
 
           <div class="widget">
-            <div class="row">
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/account-profile" class="accounts rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-dashboard"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Profile</h6>
+            <ul class="list-unstyled sidebar-nav mb-0" id="navmenu-nav">
+              <li class="navbar-item account-menu px-0">
+                <a routerLink="/account-profile" class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-dashboard"></i></span>
+                  <h6 class="mb-0 ms-2">Profile</h6>
                 </a>
-              </div>
-              <!--end col-->
+              </li>
 
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/account-members" class="accounts rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-users-alt"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Members</h6>
+              <li class="navbar-item account-menu px-0 mt-2">
+                <a routerLink="/account-members" class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-users-alt"></i></span>
+                  <h6 class="mb-0 ms-2">Members</h6>
                 </a>
-              </div>
-              <!--end col-->
+              </li>
 
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/account-works" class="accounts rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-file"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Works</h6>
+              <li class="navbar-item account-menu px-0 mt-2">
+                <a routerLink="/account-works" class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-file"></i></span>
+                  <h6 class="mb-0 ms-2">Portfolio</h6>
                 </a>
-              </div>
-              <!--end col-->
+              </li>
 
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/account-messages" class="accounts rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-envelope-star"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Messages</h6>
+              <li class="navbar-item account-menu px-0 mt-2">
+                <a routerLink="/account-messages"
+                  class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-envelope-star"></i></span>
+                  <h6 class="mb-0 ms-2">Messages</h6>
                 </a>
-              </div>
-              <!--end col-->
+              </li>
 
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/account-payments" class="accounts active rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-transaction"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Payments</h6>
+              <li class="navbar-item account-menu px-0 mt-2 active">
+                <a routerLink="/account-payments"
+                  class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-transaction"></i></span>
+                  <h6 class="mb-0 ms-2">Payments</h6>
                 </a>
-              </div>
-              <!--end col-->
+              </li>
 
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/account-setting" class="accounts rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-setting"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Settings</h6>
+              <li class="navbar-item account-menu px-0 mt-2">
+                <a routerLink="/account-setting" class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-setting"></i></span>
+                  <h6 class="mb-0 ms-2">Settings</h6>
                 </a>
-              </div>
-              <!--end col-->
+              </li>
 
-              <div class="col-6 mt-4 pt-2">
-                <a routerLink="/auth-login-three" class="accounts rounded d-block shadow text-center py-3">
-                  <span class="pro-icons h3 text-muted">
-                    <i class="uil uil-sign-out-alt"></i>
-                  </span>
-                  <h6 class="title text-dark h6 my-0">Logout</h6>
+              <li class="navbar-item account-menu px-0 mt-2">
+                <a routerLink="/auth-login-three"
+                  class="navbar-link d-flex rounded shadow align-items-center py-2 px-4">
+                  <span class="h4 mb-0"><i class="uil uil-dashboard"></i></span>
+                  <h6 class="mb-0 ms-2">Logout</h6>
                 </a>
-              </div>
-              <!--end col-->
-            </div>
+              </li>
+            </ul>
             <!--end row-->
           </div>
 
@@ -191,22 +167,22 @@
               <li class="list-inline-item"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="facebook" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
-              <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
+              <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="instagram" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
-              <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
+              <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="twitter" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
-              <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
+              <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="linkedin" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
-              <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
+              <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="github" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
-              <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
+              <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="youtube" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
-              <li class="list-inline-item ml-1"><a href="javascript:void(0)" class="rounded">
+              <li class="list-inline-item ms-1"><a href="javascript:void(0)" class="rounded">
                   <i-feather name="gitlab" class="fea icon-sm fea-social"></i-feather>
                 </a></li>
             </ul>
@@ -316,8 +292,7 @@
 <!-- Profile End -->
 
 <!-- Back to top -->
-<a href="javascript: void(0);" class="btn btn-icon btn-soft-primary back-to-top" id="back-to-top"
-  [ngxScrollTo]="'#home'">
+<a href="javascript: void(0);" class="btn btn-icon btn-primary back-to-top" id="back-to-top" [ngxScrollTo]="'#home'">
   <i-feather name="arrow-up" class="icons"></i-feather>
 </a>
 <!-- Back to top -->
