feat(admin-ui): More flexible assets component (#1358)
Closes #1357 
* feat(admin-ui): Rename ProductAssetsComponent to AssetsComponent
* feat(admin-ui): Change selector of the AssetsComponent
* feat(admin-ui): Replace hardcoded permissions with input
- Remove unused imports

--- a/packages/admin-ui/src/lib/catalog/src/components/product-variants-list/product-variants-list.component.html
+++ b/packages/admin-ui/src/lib/catalog/src/components/product-variants-list/product-variants-list.component.html
@@ -44,14 +44,15 @@
             <div class="card-block">
                 <div class="variant-body">
                     <div class="assets">
-                        <vdr-product-assets
+                        <vdr-assets
                             [compact]="true"
                             [assets]="pendingAssetChanges[variant.id]?.assets || variant.assets"
                             [featuredAsset]="
                                 pendingAssetChanges[variant.id]?.featuredAsset || variant.featuredAsset
                             "
+                            [updatePermissions]="updatePermission"
                             (change)="onAssetChange(variant.id, $event)"
-                        ></vdr-product-assets>
+                        ></vdr-assets>
                     </div>
                     <div class="variant-form-inputs">
                         <div class="standard-fields">
